auto-test/tests/chapter_13/invalid_types/extra_credit/switch_double_case.c
int main(void) {
    int x = 10;
    switch (x) {
        
        
        case 1.0: return 0;
        default: return 4;
    }
}